--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".Main3Activity">
 
     <TextView
         android:id="@+id/edittext_Titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Gerência Aluno"
+        android:text="Gerência Professor"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -22,11 +22,11 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edittext_idAluno"
+            android:id="@+id/edittext_idProfessor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="ID Aluno" />
+            android:hint="ID Professor" />
 
         <EditText
             android:id="@+id/edittext_name"
@@ -37,6 +37,12 @@
 
         <EditText
             android:id="@+id/edittext_Matricula"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="Matricula" />
+        <EditText
+            android:id="@+id/edittext_Senha"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
