--- a/app/src/main/res/layout/list_aluno.xml
+++ b/app/src/main/res/layout/list_aluno.xml
@@ -6,32 +6,40 @@
 
     <RelativeLayout
         android:id="@+id/aluno_list_text_layout"
-        android:layout_width="298dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="231dp"
+        android:layout_width="362dp"
+        android:layout_height="30dp"
+        android:layout_centerInParent="true"
         tools:ignore="NotSibling">
 
         <TextView
             android:id="@+id/aluno_list_nome"
-            android:layout_width="114dp"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
+            android:layout_width="128dp"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_marginStart="38dp"
             android:textSize="18sp"
             tools:text="Nome" />
 
         <TextView
             android:id="@+id/aluno_list_matricula"
-            android:layout_width="145dp"
-            android:layout_height="wrap_content"
+            android:layout_width="141dp"
+            android:layout_height="match_parent"
             android:layout_alignParentEnd="true"
             android:layout_alignParentTop="true"
+            android:layout_marginEnd="12dp"
             android:ellipsize="end"
             android:maxLines="3"
-            android:textSize="18sp"
+            android:textSize="16sp"
             tools:text="Matricula" />
 
     </RelativeLayout>
+
+    <CheckBox
+        android:id="@+id/checkBoxAluno"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/aluno_list_text_layout"
+        android:layout_centerVertical="true" />
+
 </RelativeLayout>
