Renomeando classes, consertado CRUD de professor

--- a/app/src/main/res/layout/telaMenu.xml
+++ b/app/src/main/res/layout/telaMenu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Main2Activity">
+    tools:context=".Menu">
 
     <Button
         android:id="@+id/buttonCruds"
@@ -15,7 +15,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:onClick="onClickAlunos"
+        android:onClick="onClickCRUDS"
         android:text="CRUD's"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
