--- a/app/src/main/res/layout/alunoCRUD.xml
+++ b/app/src/main/res/layout/alunoCRUD.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".Main3Activity">
+    tools:context=".CRUDAluno">
 
     <TextView
         android:id="@+id/edittext_Titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Gerência Professor"
+        android:text="Gerência Aluno"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -22,11 +22,11 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edittext_idProfessor"
+            android:id="@+id/edittext_idAluno"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="ID Professor" />
+            android:hint="ID Aluno" />
 
         <EditText
             android:id="@+id/edittext_name"
@@ -41,42 +41,34 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="Matricula" />
-
-        <EditText
-            android:id="@+id/edittext_Senha"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="Senha" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
-
         <Button
-            android:id="@+id/button_add_prof"
+            android:id="@+id/button_add_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="addProf"
+            android:onClick="addUser"
             android:text="Add" />
 
         <Button
-            android:id="@+id/button_delete_prof"
+            android:id="@+id/button_delete_user"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="deleteProf"
+            android:onClick="deleteUser"
             android:text="Delete" />
 
         <Button
-            android:id="@+id/button_show_prof"
+            android:id="@+id/button_show_all"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="showAllProf"
+            android:onClick="showAllUsers"
             android:text="Show All" />
     </LinearLayout>
     <TextView
