--- a/app/src/main/res/layout/professorCRUD.xml
+++ b/app/src/main/res/layout/professorCRUD.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".MainActivity">
+    tools:context=".CRUDProfessor">
 
     <TextView
         android:id="@+id/edittext_Titulo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Gerência Aluno"
+        android:text="Gerência Professor"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -22,11 +22,11 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edittext_idAluno"
+            android:id="@+id/edittext_idProfessor"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="ID Aluno" />
+            android:hint="ID Professor" />
 
         <EditText
             android:id="@+id/edittext_name"
@@ -41,34 +41,42 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="Matricula" />
+
+        <EditText
+            android:id="@+id/edittext_Senha"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:hint="Senha" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
-            android:id="@+id/button_add_user"
+            android:id="@+id/button_add_prof"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="addUser"
+            android:onClick="addProf"
             android:text="Add" />
 
         <Button
-            android:id="@+id/button_delete_user"
+            android:id="@+id/button_delete_prof"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="deleteUser"
+            android:onClick="deleteProf"
             android:text="Delete" />
 
         <Button
-            android:id="@+id/button_show_all"
+            android:id="@+id/button_show_prof"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="showAllUsers"
+            android:onClick="showAllProf"
             android:text="Show All" />
     </LinearLayout>
     <TextView
