Criando Disciplina, consertando nome em lugares errados

--- a/app/src/main/res/layout/disciplina_crud.xml
+++ b/app/src/main/res/layout/disciplina_crud.xml
@@ -6,14 +6,14 @@
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
-    tools:context=".CRUDAluno">
+    tools:context=".CRUDDisciplina">
 
     <TextView
-        android:id="@+id/edittext_TituloAluno"
+        android:id="@+id/edittext_TituloDisc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
-        android:text="Gerência Aluno"
+        android:text="Gerência Disciplinas"
         android:textSize="20dp" />
 
     <LinearLayout
@@ -22,61 +22,56 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edittext_idAluno"
+            android:id="@+id/edittext_idDisc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:hint="ID Aluno" />
+            android:hint="ID Disciplina" />
 
         <EditText
-            android:id="@+id/edittext_nameAluno"
+            android:id="@+id/edittext_nameDisc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="Nome" />
 
-        <EditText
-            android:id="@+id/edittext_MatriculaAluno"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:hint="Matricula" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
+
         <Button
-            android:id="@+id/button_add_user"
+            android:id="@+id/button_add_disc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="addUser"
+            android:onClick="addDisc"
             android:text="Add" />
 
         <Button
-            android:id="@+id/button_delete_user"
+            android:id="@+id/button_delete_disc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="deleteUser"
+            android:onClick="deleteDisc"
             android:text="Delete" />
 
         <Button
-            android:id="@+id/button_show_all"
+            android:id="@+id/button_show_disc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:onClick="showAllUsers"
+            android:onClick="showAllDisc"
             android:text="Show All" />
     </LinearLayout>
     <TextView
-        android:id="@+id/textview_resultAluno"
+        android:id="@+id/textview_resultDisc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <LinearLayout
-        android:id="@+id/ll_entriesAluno"
+        android:id="@+id/ll_entriesDisc"
         android:padding="15dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
