--- a/app/src/main/res/layout/professor_crud.xml
+++ b/app/src/main/res/layout/professor_crud.xml
@@ -9,7 +9,7 @@
     tools:context=".CRUDProfessor">
 
     <TextView
-        android:id="@+id/edittext_Titulo"
+        android:id="@+id/edittext_TituloProf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dp"
@@ -29,21 +29,21 @@
             android:hint="ID Professor" />
 
         <EditText
-            android:id="@+id/edittext_name"
+            android:id="@+id/edittext_nameProf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="Nome" />
 
         <EditText
-            android:id="@+id/edittext_Matricula"
+            android:id="@+id/edittext_MatriculaProf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:hint="Matricula" />
 
         <EditText
-            android:id="@+id/edittext_Senha"
+            android:id="@+id/edittext_SenhaProf"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
@@ -80,11 +80,11 @@
             android:text="Show All" />
     </LinearLayout>
     <TextView
-        android:id="@+id/textview_result"
+        android:id="@+id/textview_resultProf"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
     <LinearLayout
-        android:id="@+id/ll_entries"
+        android:id="@+id/ll_entriesProf"
         android:padding="15dp"
         android:orientation="vertical"
         android:layout_width="match_parent"
