Corrigindo nomenclaturas criadas automaticamente e exibicoes em ShowAll

--- a/app/src/main/res/layout/tela_selecao_cruds.xml
+++ b/app/src/main/res/layout/tela_selecao_cruds.xml
@@ -23,7 +23,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonCRUDAluno"
-        app:layout_constraintVertical_bias="0.16" />
+        app:layout_constraintVertical_bias="0.107" />
 
     <Button
         android:id="@+id/buttonCRUDAluno"
@@ -42,7 +42,7 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.365" />
+        app:layout_constraintVertical_bias="0.176" />
 
     <Button
         android:id="@+id/buttonDisc"
@@ -77,6 +77,26 @@
         android:text="Sala"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonDisc" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonDisc"
+        app:layout_constraintVertical_bias="0.214" />
+
+    <Button
+        android:id="@+id/buttonTurma"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:onClick="onClickTurma"
+        android:text="Turma"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonSala" />
 </android.support.constraint.ConstraintLayout>
