--- a/app/src/main/res/layout/sala_crud.xml
+++ b/app/src/main/res/layout/sala_crud.xml
@@ -22,7 +22,7 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edittext_idSala"
+            android:id="@+id/edittext_TurmaidSala"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
