--- a/app/src/main/res/layout/tela_login.xml
+++ b/app/src/main/res/layout/tela_login.xml
@@ -56,7 +56,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Senha"
-        android:inputType="textPassword"
+        android:inputType="text"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
